# checklist-app

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
checklist/: checklistCleanup.py  checklistExecutor.py  checklistMonitor.py  createNewChecklist.py
checklist_app/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  csv_loader.py  logging_utils.py
checklist_app/domain/: __init__.py  enums.py  models.py  policies.py
checklist_app/integrations/: __init__.py  discord_client.py  fotmob_client.py
checklist_app/repositories/: __init__.py  dynamodb.py  in_memory.py  protocols.py
checklist_app/services/: __init__.py  cleanup.py  executor.py  importer.py  monitor.py
checklist_csvs/: 4-Leg-Safe-Midweek.csv  discord-test.csv  scythe-test-1.csv  test-checklist-4.csv  test-checklist-5.csv  test-list-6.csv  test1.csv  test2.csv
classes/: match.py
commons/: constants.py
discord/: discordFunctions.py  formatMessages.py
docs/: cdk-cicd.md  t4g-server-setup.md
fotmob/: fotmobScraper.py
infra/: app.py  cdk.json
infra/checklist_infra/: __init__.py  config.py  stack.py
ops/: bootstrap_t4g.sh  checklist-app-monitor.service  checklist-app.env.example  deploy_instance_update.sh  install_app.sh  rebuild_t4g.sh  render_server_env.sh  smoke_test_t4g.sh  ubuntu-24.04-t4g-apt-packages.txt
tests/: test_domain.py  test_execution_and_monitor.py  test_fotmob_client.py  test_importer.py
